<resources>
    <string name="app_name">TCC Project - PV Calculator</string>
    <string name="titulo_open_txt">"Calculator Solar Project "</string>
    <string name="nome_txt_open">Type your full name!</string>
    <string name="txt_preco">Type how much you pay from your energy bill.</string>
    <string name="txt_obs_open">obs: Type the value in reais</string>
    <string name="txt_padrao_entrada_mono" translatable="false">Monofásico</string>
    <string name="txt_padrao_entrada_tri" translatable="false">Trifásico</string>
    <string name="botao_open_txt">Next</string>
    <string name="titulo_txt_inv" translatable="false">Informações do Inversor</string>
    <string name="Md_txt_inv" translatable="false">Modelo do Inverso:</string>
    <string name="pot_txt_nom" translatable="false">Potência nominal (kW):</string>
    <string name="num_txt_mppt_trac" translatable="false">Número de trackers de MPPT:</string>
    <string name="txt_menor_mppt" translatable="false">Menor tensão de MPPT (V):</string>
    <string name="maior_mppt_txt" translatable="false">Maior tensão de MPPT (V):</string>
    <string name="Coe_txt_MPPT" translatable="false">Coeficiente de MPPT (%):</string>
    <string name="fator_txt_pot" translatable="false">Fator de potência (%):</string>
    <string name="THD_txt" translatable="false">THD (%):</string>
    <string name="v_cc_txt" translatable="false">Tensão máxima cc (V):</string>
    <string name="corre_txt_max_string" translatable="false">Corrente maxima por String (A):</string>
    <string name="frequencia_txt_rede" translatable="false">Frequencia da rede (Hz):</string>
    <string name="seguir_txt_2" translatable="false">Seguir</string>
    <string name="voltar_txt_act1" translatable="false">Voltar</string>
    <string name="hint_nome_login" translatable="false">Digite o seu nome completo.</string>
    <string name="hint_cont_login" translatable="false">Digite o valor da sua conta de energia em R$:</string>
    <string name="efi_inv" translatable="false">Digite a eficiencia do inversor: </string>
    <string name="titulo_Inv2_des" translatable="false">Informações do Inversor</string>
    <string name="efici_inv_1" translatable="false">Rendimento do inversor:</string>
    <string name="_19" translatable="false">19%</string>
    <string name="tensao_Saida_texto" translatable="false">Tensão máxima CA de saída :</string>
    <string name="_30V" translatable="false">30 V</string>
    <string name="renogive" translatable="false">Renogive</string>
    <string name="_3_kw_pico" translatable="false">3 kW(pico)</string>
    <string name="_2" translatable="false">2</string>
    <string name="_100_v" translatable="false">100 V</string>
    <string name="_300_v" translatable="false">300 V</string>
    <string name="_50" translatable="false">50 %</string>
    <string name="_95" translatable="false">95 %</string>
    <string name="_4" translatable="false">4%</string>
    <string name="_1000v" translatable="false">1000V</string>
    <string name="_9a" translatable="false">9A</string>
    <string name="_60_hz" translatable="false">60 Hz</string>
    <string name="corrente_Saida_texto" translatable="false">Corrente CA de Saída :</string>
    <string name="_9_a" translatable="false">9 A</string>
    <string name="txt_open_padrao_entrada" translatable="false">Qual o tipo do padrão de entrada da sua casa?</string>
    <string name="text_Peso_Inv">Peso do inversor :</string>
    <string name="text_Area_inv">Area do inversor</string>
    <string name="_20_kg">20 kg</string>
    <string name="_1_m">1 m²</string>
    <string name="text_Garantia_preco">Garantia do inversor:</string>
    <string name="_10_anos">10 Anos</string>
    <string name="text_preco_inv">Preço :</string>
    <string name="r_2000_00">R$ 2000,00</string>
    <string name="Inf_titulo_modulo">Informações do Modulo Solar</string>
    <string name="textmodulosolartxt">Modelo do modulo solar :</string>
    <string name="yingli340p">Yingli340p</string>
    <string name="txtpotenciaNominalwpModulosolar">Potência nominal :</string>
    <string name="_320_wp">320 wp</string>
    <string name="txtAreadoModuloSolar">Area do Modulo Solar :</string>
    <string name="TxtRendimentodoModuloSolar">Rendimento do Modulos Solar :</string>
    <string name="textoTensaoOcmodulo">Tensão oc :</string>
    <string name="textTensaoMedia">Tensão média (DC) :</string>
    <string name="text_corrente_m_modulo_solar">Corrente média :</string>
    <string name="txtpesoModuloSolar">Peso :</string>
    <string name="txtCalculeAgora">Calcule Agora</string>
    <string name="txtEscolhaEquipamentos">Escolha quais equipamentos usar</string>
    <string name="txttipodoModuloSolar">Escolha qual o seu Modulo Solar :</string>
    <string name="digite_o_seu_e_mail">Digite o seu e-mail</string>
    <string name="buttcadastrarInversor">Inversor</string>
    <string name="txtButtonCadastroModulosSolares">Paineis</string>
    <string name="logocerf">LogoCERF</string>
    <string name="todo">TODO</string>
    <string name="modelo_do_inversor">Modelo do inversor</string>
    <string name="bt_inversor">bt inversor</string>
    <string name="imageminv">imagemInv</string>
    <string name="salvar_dados">Salvar dados</string>
    <string name="pot_ncia_maxima_de_entrada">Potência maxima de entrada :</string>
    <string name="tens_o_fase_neutro">Tensão Fase Neutro :</string>
    <string name="cadastrar_modulo">Cadastrar Modulo</string>
    <string name="loading_please_wait">Loading, Please Wait..</string>
    <string name="loading_please_wait2">Loading, Please Wait..</string>
    <string-array name="modulosSolares">
        <item>225 wp</item>
        <item>275 wp</item>
        <item>320 wp</item>
        <item>Canadian 325 wp</item>
    </string-array>
    <![CDATA[

    />

]]>
</resources>
