<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.projetocpv.example.mateus2314.projetotcc_calculopv.Main2Activity_dados_inversor"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:theme="@style/Base.Theme.AppCompat">

        <TextView
            android:id="@+id/titulo_rend_inv_2"
            android:layout_width="201dp"
            android:layout_height="31dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="54dp"
            android:contentDescription="@string/efi_inv"
            android:layerType="software"
            android:scrollbars="none"
            android:text="@string/efici_inv_1"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editTensao_Saida"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titulo_Inv2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/titulo_Inv2_des"
            android:text="@string/titulo_txt_inv"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/titulo_rend_inv_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_rend_inv"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/_19"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/titulo_rend_inv_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/titulo_rend_inv_2" />

        <EditText
            android:id="@+id/editTensao_Saida"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/_30V"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tex_tens_said"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tex_tens_said" />

        <EditText
            android:id="@+id/editCorrente_Saida"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/_9_a"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tex_corrente_said2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tex_corrente_said2" />

        <EditText
            android:id="@+id/editPeso_Inv"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/_20_kg"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Tex_peso_inv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.714"
            app:layout_constraintStart_toEndOf="@+id/Tex_peso_inv" />

        <EditText
            android:id="@+id/editArea_Inv"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/_1_m"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tex_area_inv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tex_area_inv" />

        <EditText
            android:id="@+id/edit_Garantia_Inv"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/_10_anos"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tex_garantia_preco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tex_garantia_preco" />

        <EditText
            android:id="@+id/edit_Preco_Inv"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:background="@android:color/darker_gray"
            android:ems="10"
            android:hint="@string/r_2000_00"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tex_preco_inv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tex_preco_inv" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="42dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/titulo_rend_inv_2"
            app:layout_constraintEnd_toStartOf="@+id/titulo_Inv2"
            app:layout_constraintGuide_percent="0.08219178"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="414dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="81dp"
            app:layout_constraintTop_toBottomOf="@+id/titulo_rend_inv_2" />

        <TextView
            android:id="@+id/tex_tens_said"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/tensao_Saida_texto"
            android:layerType="software"
            android:text="@string/tensao_Saida_texto"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editCorrente_Saida"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tex_corrente_said2"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/corrente_Saida_texto"
            android:layerType="software"
            android:text="@string/corrente_Saida_texto"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editPeso_Inv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/Tex_peso_inv"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/corrente_Saida_texto"
            android:layerType="software"
            android:text="@string/text_Peso_Inv"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editArea_Inv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tex_corrente_said2" />

        <TextView
            android:id="@+id/tex_area_inv"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/corrente_Saida_texto"
            android:layerType="software"
            android:text="@string/text_Area_inv"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Tex_peso_inv" />

        <TextView
            android:id="@+id/tex_garantia_preco"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/corrente_Saida_texto"
            android:layerType="software"
            android:text="@string/text_Garantia_preco"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/edit_Preco_Inv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tex_area_inv" />

        <TextView
            android:id="@+id/tex_preco_inv"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginBottom="110dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/corrente_Saida_texto"
            android:layerType="software"
            android:text="@string/text_preco_inv"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/idbuttonVoltaract2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tex_garantia_preco" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="377dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.26"
            app:layout_constraintTop_toBottomOf="@+id/titulo_rend_inv_2" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="85dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="425dp"
            app:layout_constraintTop_toBottomOf="@+id/titulo_rend_inv_2" />

        <Button
            android:id="@+id/idbuttonVoltaract2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/voltar_txt_act1"
            android:text="@string/voltar_txt_act1"
            app:layout_constraintBaseline_toBaselineOf="@+id/idbuttonSeguirAct4"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/idbuttonSeguirAct4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/seguir_txt_2"
            android:text="@string/seguir_txt_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>